# src/controllers/patients.js
@@ -2,9 +2,8 @@ const httpStatus = require('http-status')
 const { PatientService } = require('../services')
 
 async function get (req, res) {
-  const { id } = req.params
-  const query = req.query
-  const data = await PatientService.read({ id, query })
+  const { source, medicalRecordNumber } = req.params
+  const data = await PatientService.read({ source, medicalRecordNumber })
   data ? res.status(httpStatus.OK).send(data) : res.status(httpStatus.NOT_FOUND).send()
 }
 
@@ -13,14 +12,13 @@ async function post (req, res) {
   res.status(httpStatus.CREATED).send(data)
 }
 async function patch (req, res) {
-  const { id } = req.params
-  const [data] = await PatientService.update(req.body, id)
+  const { source, medicalRecordNumber } = req.params
+  const [data] = await PatientService.update(req.body, { source, medicalRecordNumber })
   data === 1 ? res.status(httpStatus.NO_CONTENT).send() : res.status(httpStatus.NOT_FOUND).send('Not Found')
 }
 async function del (req, res) {
-  const { id } = req.params
-  const data = await PatientService.del(id)
-  console.log('data!!!!!!', data)
+  const { source, medicalRecordNumber } = req.params
+  const data = await PatientService.del({ source, medicalRecordNumber })
   data === 1 ? res.status(httpStatus.NO_CONTENT).send() : res.status(httpStatus.NOT_FOUND).send('Not Found')
 }
 
