# src/models/patientmemberrecord.js
@@ -2,10 +2,15 @@
 module.exports = (sequelize, DataTypes) => {
   const PatientMemberRecord = sequelize.define('PatientMemberRecord', {
     medicalRecordNumber: DataTypes.STRING,
-    source: DataTypes.STRING
+    enterpriseId: DataTypes.STRING,
+    socialSecurityNumber: DataTypes.STRING,
+    source: DataTypes.STRING,
+    firstName: DataTypes.STRING,
+    lastName: DataTypes.STRING,
+    addressId: DataTypes.INTEGER
   }, {})
-  PatientMemberRecord.associate = function (models) {
-
+  PatientMemberRecord.associate = models => {
+    PatientMemberRecord.belongsTo(models.Address, { as: 'address' })
   }
   return PatientMemberRecord
 }
