# src/routers/index.js
@@ -1,69 +1,27 @@
-const { asyncWrap } = require('../lib/middlewares')
+const { asyncWrap } = require('../lib/middleware')
 const {
-  PatientController,
-  PatientMemberRecordController,
-  AddressController
+  PatientController
 } = require('../controllers')
 
 const patients = function ({ router }) {
   router.post('/',
     asyncWrap(PatientController.post)
   )
-  router.get('/',
+  router.get('/:source/:medicalRecordNumber',
     asyncWrap(PatientController.get)
   )
   router.get('/:id',
     asyncWrap(PatientController.get)
   )
-  router.patch('/:id',
+  router.patch('/:source/:medicalRecordNumber',
     asyncWrap(PatientController.patch)
   )
-  router.delete('/:id',
+  router.delete('/:source/:medicalRecordNumber',
     asyncWrap(PatientController.delete)
   )
   return router
 }
 
-const addresses = function ({ router }) {
-  router.post('/',
-    asyncWrap(AddressController.post)
-  )
-  router.get('/',
-    asyncWrap(AddressController.get)
-  )
-  router.get('/:id',
-    asyncWrap(AddressController.get)
-  )
-  router.patch('/:id',
-    asyncWrap(AddressController.patch)
-  )
-  router.delete('/:id',
-    asyncWrap(AddressController.delete)
-  )
-  return router
-}
-
-const patientMemberRecords = function ({ router }) {
-  router.post('/',
-    asyncWrap(PatientMemberRecordController.post)
-  )
-  router.get('/',
-    asyncWrap(PatientMemberRecordController.get)
-  )
-  router.get('/:id',
-    asyncWrap(PatientMemberRecordController.get)
-  )
-  router.patch('/:id',
-    asyncWrap(PatientMemberRecordController.patch)
-  )
-  router.delete('/:id',
-    asyncWrap(PatientMemberRecordController.delete)
-  )
-  return router
-}
-
 module.exports = {
-  patients,
-  addresses,
-  patientMemberRecords
+  patients
 }
